--- a/prepros.cfg
+++ b/prepros.cfg
@@ -25,6 +25,19 @@
           "parents": [],
           "type": "css"
         },
+        "74806006": {
+          "id": "74806006",
+          "path": "images/leavse.png",
+          "output": "images/leavse.png",
+          "name": "leavse.png",
+          "category": "IMAGE",
+          "size": 62679,
+          "type": "png",
+          "initialSize": 62679,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "6f076647": {
           "id": "6f076647",
           "path": "about.html",
@@ -306,19 +319,6 @@
           "height": 0,
           "width": 0
         },
-        "735281e6": {
-          "id": "735281e6",
-          "path": "images/background.jpg",
-          "output": "images/background.jpg",
-          "name": "background.jpg",
-          "category": "IMAGE",
-          "size": 150739,
-          "type": "jpg",
-          "initialSize": 150739,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "5c7e7c17": {
           "id": "5c7e7c17",
           "path": "images/background_text2.jpg",
@@ -338,12 +338,41 @@
           "output": "images/background-exhibition.jpg",
           "name": "background-exhibition.jpg",
           "category": "IMAGE",
-          "size": 832378,
+          "size": 449877,
           "type": "jpg",
-          "initialSize": 832378,
+          "initialSize": 449877,
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "735281e6": {
+          "id": "735281e6",
+          "path": "images/background.jpg",
+          "output": "images/background.jpg",
+          "name": "background.jpg",
+          "category": "IMAGE",
+          "size": 557866,
+          "type": "jpg",
+          "initialSize": 557866,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a0233e7c": {
+          "id": "a0233e7c",
+          "path": "js/script.js",
+          "output": "js/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
