--- a/prepros.cfg
+++ b/prepros.cfg
@@ -25,74 +25,6 @@
           "parents": [],
           "type": "css"
         },
-        "74806006": {
-          "id": "74806006",
-          "path": "images/leavse.png",
-          "output": "images/leavse.png",
-          "name": "leavse.png",
-          "category": "IMAGE",
-          "size": 62679,
-          "type": "png",
-          "initialSize": 62679,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "6f076647": {
-          "id": "6f076647",
-          "path": "about.html",
-          "output": "about.html",
-          "name": "about.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "62b7c8ff": {
-          "id": "62b7c8ff",
-          "path": "exhibition.html",
-          "output": "exhibition.html",
-          "name": "exhibition.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "a3a90f64": {
-          "id": "a3a90f64",
-          "path": "fair.html",
-          "output": "fair.html",
-          "name": "fair.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "f84ed81f": {
-          "id": "f84ed81f",
-          "path": "festival.html",
-          "output": "festival.html",
-          "name": "festival.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "c19869f4": {
-          "id": "c19869f4",
-          "path": "fighting_of_brides.html",
-          "output": "fighting_of_brides.html",
-          "name": "fighting_of_brides.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -228,71 +160,6 @@
           "height": 0,
           "width": 0
         },
-        "110fb338": {
-          "id": "110fb338",
-          "path": "images/background-about.jpg",
-          "output": "images/background-about.jpg",
-          "name": "background-about.jpg",
-          "category": "IMAGE",
-          "size": 508421,
-          "type": "jpg",
-          "initialSize": 508421,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "3bbafa87": {
-          "id": "3bbafa87",
-          "path": "images/background-fair.jpg",
-          "output": "images/background-fair.jpg",
-          "name": "background-fair.jpg",
-          "category": "IMAGE",
-          "size": 293970,
-          "type": "jpg",
-          "initialSize": 293970,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "2bfe148d": {
-          "id": "2bfe148d",
-          "path": "images/background-festival.jpg",
-          "output": "images/background-festival.jpg",
-          "name": "background-festival.jpg",
-          "category": "IMAGE",
-          "size": 172560,
-          "type": "jpg",
-          "initialSize": 172560,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "34f650f4": {
-          "id": "34f650f4",
-          "path": "images/background-pattern.png",
-          "output": "images/background-pattern.png",
-          "name": "background-pattern.png",
-          "category": "IMAGE",
-          "size": 53702,
-          "type": "png",
-          "initialSize": 53702,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "d8af3ff4": {
-          "id": "d8af3ff4",
-          "path": "images/picture.jpg",
-          "output": "images/picture.jpg",
-          "name": "picture.jpg",
-          "category": "IMAGE",
-          "size": 133027,
-          "type": "jpg",
-          "initialSize": 133027,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "316b7e5b": {
           "id": "316b7e5b",
           "path": "images/background-exhibition.png",
@@ -302,32 +169,6 @@
           "size": 117687,
           "type": "png",
           "initialSize": 117687,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "2fbe3042": {
-          "id": "2fbe3042",
-          "path": "images/background-about.png",
-          "output": "images/background-about.png",
-          "name": "background-about.png",
-          "category": "IMAGE",
-          "size": 118874,
-          "type": "png",
-          "initialSize": 118874,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "5c7e7c17": {
-          "id": "5c7e7c17",
-          "path": "images/background_text2.jpg",
-          "output": "images/background_text2.jpg",
-          "name": "background_text2.jpg",
-          "category": "IMAGE",
-          "size": 249200,
-          "type": "jpg",
-          "initialSize": 249200,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -373,6 +214,58 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "9528a851": {
+          "id": "9528a851",
+          "path": "images/leavs.jpg",
+          "output": "images/leavs.jpg",
+          "name": "leavs.jpg",
+          "category": "IMAGE",
+          "size": 465010,
+          "type": "jpg",
+          "initialSize": 465010,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8421d7ba": {
+          "id": "8421d7ba",
+          "path": "images/fighting.png",
+          "output": "images/fighting.png",
+          "name": "fighting.png",
+          "category": "IMAGE",
+          "size": 83515,
+          "type": "png",
+          "initialSize": 83515,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0cdb6801": {
+          "id": "0cdb6801",
+          "path": "images/groom.png",
+          "output": "images/groom.png",
+          "name": "groom.png",
+          "category": "IMAGE",
+          "size": 130310,
+          "type": "png",
+          "initialSize": 130310,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "80bd30b2": {
+          "id": "80bd30b2",
+          "path": "images/background-fair.png",
+          "output": "images/background-fair.png",
+          "name": "background-fair.png",
+          "category": "IMAGE",
+          "size": 175137,
+          "type": "png",
+          "initialSize": 175137,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
