--- a/prepros.cfg
+++ b/prepros.cfg
@@ -38,61 +38,6 @@
           "height": 0,
           "width": 0
         },
-        "6f076647": {
-          "id": "6f076647",
-          "path": "about.html",
-          "output": "about.html",
-          "name": "about.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "62b7c8ff": {
-          "id": "62b7c8ff",
-          "path": "exhibition.html",
-          "output": "exhibition.html",
-          "name": "exhibition.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "a3a90f64": {
-          "id": "a3a90f64",
-          "path": "fair.html",
-          "output": "fair.html",
-          "name": "fair.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "f84ed81f": {
-          "id": "f84ed81f",
-          "path": "festival.html",
-          "output": "festival.html",
-          "name": "festival.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "c19869f4": {
-          "id": "c19869f4",
-          "path": "fighting_of_brides.html",
-          "output": "fighting_of_brides.html",
-          "name": "fighting_of_brides.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -228,71 +173,6 @@
           "height": 0,
           "width": 0
         },
-        "110fb338": {
-          "id": "110fb338",
-          "path": "images/background-about.jpg",
-          "output": "images/background-about.jpg",
-          "name": "background-about.jpg",
-          "category": "IMAGE",
-          "size": 508421,
-          "type": "jpg",
-          "initialSize": 508421,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "3bbafa87": {
-          "id": "3bbafa87",
-          "path": "images/background-fair.jpg",
-          "output": "images/background-fair.jpg",
-          "name": "background-fair.jpg",
-          "category": "IMAGE",
-          "size": 293970,
-          "type": "jpg",
-          "initialSize": 293970,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "2bfe148d": {
-          "id": "2bfe148d",
-          "path": "images/background-festival.jpg",
-          "output": "images/background-festival.jpg",
-          "name": "background-festival.jpg",
-          "category": "IMAGE",
-          "size": 172560,
-          "type": "jpg",
-          "initialSize": 172560,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "34f650f4": {
-          "id": "34f650f4",
-          "path": "images/background-pattern.png",
-          "output": "images/background-pattern.png",
-          "name": "background-pattern.png",
-          "category": "IMAGE",
-          "size": 53702,
-          "type": "png",
-          "initialSize": 53702,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "d8af3ff4": {
-          "id": "d8af3ff4",
-          "path": "images/picture.jpg",
-          "output": "images/picture.jpg",
-          "name": "picture.jpg",
-          "category": "IMAGE",
-          "size": 133027,
-          "type": "jpg",
-          "initialSize": 133027,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "316b7e5b": {
           "id": "316b7e5b",
           "path": "images/background-exhibition.png",
@@ -302,32 +182,6 @@
           "size": 117687,
           "type": "png",
           "initialSize": 117687,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "2fbe3042": {
-          "id": "2fbe3042",
-          "path": "images/background-about.png",
-          "output": "images/background-about.png",
-          "name": "background-about.png",
-          "category": "IMAGE",
-          "size": 118874,
-          "type": "png",
-          "initialSize": 118874,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "5c7e7c17": {
-          "id": "5c7e7c17",
-          "path": "images/background_text2.jpg",
-          "output": "images/background_text2.jpg",
-          "name": "background_text2.jpg",
-          "category": "IMAGE",
-          "size": 249200,
-          "type": "jpg",
-          "initialSize": 249200,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -373,6 +227,149 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "110fb338": {
+          "id": "110fb338",
+          "path": "images/background-about.jpg",
+          "output": "images/background-about.jpg",
+          "name": "background-about.jpg",
+          "category": "IMAGE",
+          "size": 508421,
+          "type": "jpg",
+          "initialSize": 508421,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2fbe3042": {
+          "id": "2fbe3042",
+          "path": "images/background-about.png",
+          "output": "images/background-about.png",
+          "name": "background-about.png",
+          "category": "IMAGE",
+          "size": 118874,
+          "type": "png",
+          "initialSize": 118874,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3bbafa87": {
+          "id": "3bbafa87",
+          "path": "images/background-fair.jpg",
+          "output": "images/background-fair.jpg",
+          "name": "background-fair.jpg",
+          "category": "IMAGE",
+          "size": 293970,
+          "type": "jpg",
+          "initialSize": 293970,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2bfe148d": {
+          "id": "2bfe148d",
+          "path": "images/background-festival.jpg",
+          "output": "images/background-festival.jpg",
+          "name": "background-festival.jpg",
+          "category": "IMAGE",
+          "size": 172560,
+          "type": "jpg",
+          "initialSize": 172560,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "34f650f4": {
+          "id": "34f650f4",
+          "path": "images/background-pattern.png",
+          "output": "images/background-pattern.png",
+          "name": "background-pattern.png",
+          "category": "IMAGE",
+          "size": 53702,
+          "type": "png",
+          "initialSize": 53702,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5c7e7c17": {
+          "id": "5c7e7c17",
+          "path": "images/background_text2.jpg",
+          "output": "images/background_text2.jpg",
+          "name": "background_text2.jpg",
+          "category": "IMAGE",
+          "size": 249200,
+          "type": "jpg",
+          "initialSize": 249200,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d8af3ff4": {
+          "id": "d8af3ff4",
+          "path": "images/picture.jpg",
+          "output": "images/picture.jpg",
+          "name": "picture.jpg",
+          "category": "IMAGE",
+          "size": 133027,
+          "type": "jpg",
+          "initialSize": 133027,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e4d14d42": {
+          "id": "e4d14d42",
+          "path": "images/greyfloral.png",
+          "output": "images/greyfloral.png",
+          "name": "greyfloral.png",
+          "category": "IMAGE",
+          "size": 6162,
+          "type": "png",
+          "initialSize": 6162,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "645e4933": {
+          "id": "645e4933",
+          "path": "images/groom.jpg",
+          "output": "images/groom.jpg",
+          "name": "groom.jpg",
+          "category": "IMAGE",
+          "size": 103000,
+          "type": "jpg",
+          "initialSize": 103000,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e26bd9d5": {
+          "id": "e26bd9d5",
+          "path": "images/halftone.png",
+          "output": "images/halftone.png",
+          "name": "halftone.png",
+          "category": "IMAGE",
+          "size": 11412,
+          "type": "png",
+          "initialSize": 11412,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "57b8c38a": {
+          "id": "57b8c38a",
+          "path": "images/1282337642_0002-5616x3744.jpg",
+          "output": "images/1282337642_0002-5616x3744.jpg",
+          "name": "1282337642_0002-5616x3744.jpg",
+          "category": "IMAGE",
+          "size": 14621,
+          "type": "jpg",
+          "initialSize": 14621,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
